[package]
name = "chain-life"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to authenticate with Strava using OAuth and fetch your total kilometers since a given date"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-username/chain-life"
repository = "https://github.com/your-username/chain-life"
keywords = ["strava", "cli", "cycling", "fitness", "oauth"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.0"
uuid = { version = "1.0", features = ["v4"] }
colored = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"